--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,7 +16,7 @@ const {
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content={description} />
-        <link rel="icon" type="image/png" href="/favicon.png" />
+        <link rel="icon" type="image/png" href="/feai_logo/feai_logo_nobg.png" />
         <meta name="generator" content={Astro.generator} />
 
         <!-- Google Fonts - Montserrat (Montreal-style) -->
